twodim_compiler/TwoDimParser.py
# Generated from TwoDimParser.g4 by ANTLR 4.9.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO

if __name__ is not None and "." in __name__:
    from .TwoDimParserBase import TwoDimParserBase
else:
    from TwoDimParserBase import TwoDimParserBase




class TwoDimParser(TwoDimParserBase):
    grammarFileName = "TwoDimParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'func'", "'switch'", "'case'", "'default'",
                    "'if'", "'else'", "'type'", "'package'", "'import'",
                    "'nil'", "<INVALID>", "'square'", "'rect'", "'circle'",
                    "'triangle'", "'shape'", "'draw'", "'#viewport'", "'left'",
                    "'right'", "'top'", "'bot'", "'outer'", "'inner'",
                    "'on'", "'under'", "'in'", "'('", "')'", "'{'", "'}'",
                    "'['", "']'", "'='", "','", "';'", "':'", "'.'", "'++'",
                    "'--'", "'or'", "'and'", "'=='", "'!='", "'<'", "'<='",
                    "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", "'>>'",
                    "'&^'", "'!'", "'+'", "'-'", "'^'", "'*'", "'&'"]

    symbolicNames = ["<INVALID>", "FUNC", "SWITCH", "CASE", "DEFAULT",
                     "IF", "ELSE", "TYPE", "PACKAGE", "IMPORT", "NIL_LIT",
                     "IDENTIFIER", "SQUARE", "RECT", "CIRCLE", "TRIANGLE",
                     "SHAPE", "DRAW", "VIEWPORT", "LEFT", "RIGHT", "TOP",
                     "BOT", "OUTER", "INNER", "ON", "UNDER", "IN", "L_PAREN",
                     "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET",
                     "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS_PLUS",
                     "MINUS_MINUS", "LOGICAL_OR", "LOGICAL_AND", "EQUALS",
                     "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER",
                     "GREATER_OR_EQUALS", "OR", "DIV", "MOD", "LSHIFT",
                     "RSHIFT", "BIT_CLEAR", "EXCLAMATION", "PLUS", "MINUS",
                     "CARET", "STAR", "AMPERSAND", "DECIMAL_LIT", "FLOAT_LIT",
                     "RUNE_LIT", "RAW_STRING_LIT", "INTERPRETED_STRING_LIT",
                     "SIZE_LIT", "WS", "COMMENT", "TERMINATOR", "LINE_COMMENT"]

    RULE_sourceFile = 0
    RULE_viewportClause = 1
    RULE_declaration = 2
    RULE_identifierList = 3
    RULE_expressionList = 4
    RULE_functionDecl = 5
    RULE_signature = 6
    RULE_parameters = 7
    RULE_parameterDecl = 8
    RULE_functionCall = 9
    RULE_drawClause = 10
    RULE_shapeDecl = 11
    RULE_shapeSpec = 12
    RULE_shapeColor = 13
    RULE_block = 14
    RULE_statementList = 15
    RULE_statement = 16
    RULE_simpleStmt = 17
    RULE_expressionStmt = 18
    RULE_shapeArguments = 19
    RULE_assignmentDeclarationStmt = 20
    RULE_assignment = 21
    RULE_assign_op = 22
    RULE_ifStmt = 23
    RULE_switchStmt = 24
    RULE_exprSwitchStmt = 25
    RULE_exprCaseClause = 26
    RULE_exprSwitchCase = 27
    RULE_typeName = 28
    RULE_relationDetailOp = 29
    RULE_singleLevelRelationOp = 30
    RULE_multiLevelRelationOp = 31
    RULE_relationExpr = 32
    RULE_expression = 33
    RULE_primaryExpr = 34
    RULE_operand = 35
    RULE_literal = 36
    RULE_basicLit = 37
    RULE_integer = 38
    RULE_operandName = 39
    RULE_string_ = 40
    RULE_arguments = 41
    RULE_eos = 42

    ruleNames = ["sourceFile", "viewportClause", "declaration", "identifierList",
                 "expressionList", "functionDecl", "signature", "parameters",
                 "parameterDecl", "functionCall", "drawClause", "shapeDecl",
                 "shapeSpec", "shapeColor", "block", "statementList",
                 "statement", "simpleStmt", "expressionStmt", "shapeArguments",
                 "assignmentDeclarationStmt", "assignment", "assign_op",
                 "ifStmt", "switchStmt", "exprSwitchStmt", "exprCaseClause",
                 "exprSwitchCase", "typeName", "relationDetailOp", "singleLevelRelationOp",
                 "multiLevelRelationOp", "relationExpr", "expression",
                 "primaryExpr", "operand", "literal", "basicLit", "integer",
                 "operandName", "string_", "arguments", "eos"]

    EOF = Token.EOF
    FUNC = 1
    SWITCH = 2
    CASE = 3
    DEFAULT = 4
    IF = 5
    ELSE = 6
    TYPE = 7
    PACKAGE = 8
    IMPORT = 9
    NIL_LIT = 10
    IDENTIFIER = 11
    SQUARE = 12
    RECT = 13
    CIRCLE = 14
    TRIANGLE = 15
    SHAPE = 16
    DRAW = 17
    VIEWPORT = 18
    LEFT = 19
    RIGHT = 20
    TOP = 21
    BOT = 22
    OUTER = 23
    INNER = 24
    ON = 25
    UNDER = 26
    IN = 27
    L_PAREN = 28
    R_PAREN = 29
    L_CURLY = 30
    R_CURLY = 31
    L_BRACKET = 32
    R_BRACKET = 33
    ASSIGN = 34
    COMMA = 35
    SEMI = 36
    COLON = 37
    DOT = 38
    PLUS_PLUS = 39
    MINUS_MINUS = 40
    LOGICAL_OR = 41
    LOGICAL_AND = 42
    EQUALS = 43
    NOT_EQUALS = 44
    LESS = 45
    LESS_OR_EQUALS = 46
    GREATER = 47
    GREATER_OR_EQUALS = 48
    OR = 49
    DIV = 50
    MOD = 51
    LSHIFT = 52
    RSHIFT = 53
    BIT_CLEAR = 54
    EXCLAMATION = 55
    PLUS = 56
    MINUS = 57
    CARET = 58
    STAR = 59
    AMPERSAND = 60
    DECIMAL_LIT = 61
    FLOAT_LIT = 62
    RUNE_LIT = 63
    RAW_STRING_LIT = 64
    INTERPRETED_STRING_LIT = 65
    SIZE_LIT = 66
    WS = 67
    COMMENT = 68
    TERMINATOR = 69
    LINE_COMMENT = 70

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def drawClause(self):
            return self.getTypedRuleContext(TwoDimParser.DrawClauseContext, 0)

        def eos(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.EosContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.EosContext, i)

        def viewportClause(self):
            return self.getTypedRuleContext(TwoDimParser.ViewportClauseContext, 0)

        def statementList(self):
            return self.getTypedRuleContext(TwoDimParser.StatementListContext, 0)

        def functionDecl(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.FunctionDeclContext, i)

        def declaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.DeclarationContext, i)

        def getRuleIndex(self):
            return TwoDimParser.RULE_sourceFile

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSourceFile"):
                listener.enterSourceFile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSourceFile"):
                listener.exitSourceFile(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSourceFile"):
                return visitor.visitSourceFile(self)
            else:
                return visitor.visitChildren(self)

    def sourceFile(self):

        localctx = TwoDimParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TwoDimParser.VIEWPORT:
                self.state = 86
                self.viewportClause()

            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 91
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [TwoDimParser.FUNC]:
                        self.state = 89
                        self.functionDecl()
                        pass
                    elif token in [TwoDimParser.SQUARE, TwoDimParser.RECT, TwoDimParser.CIRCLE, TwoDimParser.TRIANGLE,
                                   TwoDimParser.SHAPE]:
                        self.state = 90
                        self.declaration()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 93
                    self.eos()
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.state = 100
                self.statementList()

            self.state = 103
            self.drawClause()
            self.state = 104
            self.eos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ViewportClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VIEWPORT(self):
            return self.getToken(TwoDimParser.VIEWPORT, 0)

        def DECIMAL_LIT(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.DECIMAL_LIT)
            else:
                return self.getToken(TwoDimParser.DECIMAL_LIT, i)

        def eos(self):
            return self.getTypedRuleContext(TwoDimParser.EosContext, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_viewportClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterViewportClause"):
                listener.enterViewportClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitViewportClause"):
                listener.exitViewportClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitViewportClause"):
                return visitor.visitViewportClause(self)
            else:
                return visitor.visitChildren(self)

    def viewportClause(self):

        localctx = TwoDimParser.ViewportClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_viewportClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(TwoDimParser.VIEWPORT)
            self.state = 107
            self.match(TwoDimParser.DECIMAL_LIT)
            self.state = 108
            self.match(TwoDimParser.DECIMAL_LIT)
            self.state = 109
            self.eos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shapeDecl(self):
            return self.getTypedRuleContext(TwoDimParser.ShapeDeclContext, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)

    def declaration(self):

        localctx = TwoDimParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.shapeDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.IDENTIFIER)
            else:
                return self.getToken(TwoDimParser.IDENTIFIER, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.COMMA)
            else:
                return self.getToken(TwoDimParser.COMMA, i)

        def getRuleIndex(self):
            return TwoDimParser.RULE_identifierList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdentifierList"):
                listener.enterIdentifierList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdentifierList"):
                listener.exitIdentifierList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIdentifierList"):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)

    def identifierList(self):

        localctx = TwoDimParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identifierList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(TwoDimParser.IDENTIFIER)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 114
                    self.match(TwoDimParser.COMMA)
                    self.state = 115
                    self.match(TwoDimParser.IDENTIFIER)
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.ExpressionContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.COMMA)
            else:
                return self.getToken(TwoDimParser.COMMA, i)

        def getRuleIndex(self):
            return TwoDimParser.RULE_expressionList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpressionList"):
                listener.enterExpressionList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpressionList"):
                listener.exitExpressionList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpressionList"):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)

    def expressionList(self):

        localctx = TwoDimParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.expression()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == TwoDimParser.COMMA:
                self.state = 122
                self.match(TwoDimParser.COMMA)
                self.state = 123
                self.expression()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(TwoDimParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(TwoDimParser.IDENTIFIER, 0)

        def signature(self):
            return self.getTypedRuleContext(TwoDimParser.SignatureContext, 0)

        def block(self):
            return self.getTypedRuleContext(TwoDimParser.BlockContext, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_functionDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionDecl"):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionDecl"):
                listener.exitFunctionDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionDecl"):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)

    def functionDecl(self):

        localctx = TwoDimParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(TwoDimParser.FUNC)
            self.state = 130
            self.match(TwoDimParser.IDENTIFIER)

            self.state = 131
            self.signature()
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 132
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(TwoDimParser.ParametersContext, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_signature

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSignature"):
                listener.enterSignature(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSignature"):
                listener.exitSignature(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSignature"):
                return visitor.visitSignature(self)
            else:
                return visitor.visitChildren(self)

    def signature(self):

        localctx = TwoDimParser.SignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_signature)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                if not self.noTerminatorAfterParams(1):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self.noTerminatorAfterParams(1)")
                self.state = 136
                self.parameters()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.parameters()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(TwoDimParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(TwoDimParser.R_PAREN, 0)

        def parameterDecl(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.ParameterDeclContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.ParameterDeclContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.COMMA)
            else:
                return self.getToken(TwoDimParser.COMMA, i)

        def getRuleIndex(self):
            return TwoDimParser.RULE_parameters

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParameters"):
                listener.enterParameters(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParameters"):
                listener.exitParameters(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParameters"):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)

    def parameters(self):

        localctx = TwoDimParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(TwoDimParser.L_PAREN)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << TwoDimParser.SQUARE) | (1 << TwoDimParser.RECT) | (1 << TwoDimParser.CIRCLE) | (
                    1 << TwoDimParser.TRIANGLE) | (1 << TwoDimParser.SHAPE))) != 0):
                self.state = 141
                self.parameterDecl()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == TwoDimParser.COMMA:
                    self.state = 142
                    self.match(TwoDimParser.COMMA)
                    self.state = 143
                    self.parameterDecl()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 151
            self.match(TwoDimParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(TwoDimParser.TypeNameContext, 0)

        def identifierList(self):
            return self.getTypedRuleContext(TwoDimParser.IdentifierListContext, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_parameterDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParameterDecl"):
                listener.enterParameterDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParameterDecl"):
                listener.exitParameterDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParameterDecl"):
                return visitor.visitParameterDecl(self)
            else:
                return visitor.visitChildren(self)

    def parameterDecl(self):

        localctx = TwoDimParser.ParameterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.typeName()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TwoDimParser.IDENTIFIER:
                self.state = 154
                self.identifierList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TwoDimParser.IDENTIFIER, 0)

        def L_PAREN(self):
            return self.getToken(TwoDimParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(TwoDimParser.R_PAREN, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.WS)
            else:
                return self.getToken(TwoDimParser.WS, i)

        def operandName(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TwoDimParser.OperandNameContext)
            else:
                return self.getTypedRuleContext(TwoDimParser.OperandNameContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TwoDimParser.COMMA)
            else:
                return self.getToken(TwoDimParser.COMMA, i)

        def getRuleIndex(self):
            return TwoDimParser.RULE_functionCall

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionCall"):
                listener.enterFunctionCall(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionCall"):
                listener.exitFunctionCall(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionCall"):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)

    def functionCall(self):

        localctx = TwoDimParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionCall)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(TwoDimParser.IDENTIFIER)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TwoDimParser.WS:
                self.state = 158
                self.match(TwoDimParser.WS)

            self.state = 161
            self.match(TwoDimParser.L_PAREN)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TwoDimParser.WS:
                self.state = 162
                self.match(TwoDimParser.WS)

            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TwoDimParser.IDENTIFIER:
                self.state = 165
                self.operandName()

            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == TwoDimParser.COMMA:
                self.state = 168
                self.match(TwoDimParser.COMMA)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == TwoDimParser.WS:
                    self.state = 169
                    self.match(TwoDimParser.WS)

                self.state = 172
                self.operandName()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(TwoDimParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DrawClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(TwoDimParser.DRAW, 0)

        def IDENTIFIER(self):
            return self.getToken(TwoDimParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TwoDimParser.RULE_drawClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDrawClause"):
                listener.enterDrawClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDrawClause"):
                listener.exitDrawClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDrawClause"):
                return visitor.visitDrawClause(self)
            else:
                return visitor.visitChildren(self)

    def drawClause(self):

        localctx = TwoDimParser.DrawClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_drawClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(TwoDimParser.DRAW)
            self.state = 181
            self.match(TwoDimParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ShapeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shapeSpec(self):
            return self.getTypedRuleContext(TwoDimParser.ShapeSpecContext, 0)
